[FIX] web: invoice lines overflow
When opening the form view of a sales or purchase invoice in firefox, if there are many columns in the lines or little horizontal space, an overflow problem occurred.

This fix makes the form display correctly.

@moduon MT-2408 OPW-3201461

--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -1226,3 +1226,7 @@
     clear: both;
     justify-content: space-between;
 }
+
+.o_field_widget.o_field_section_and_note_one2many{
+    display: block;
+}
